--- a/assets/all/css/main.css
+++ b/assets/all/css/main.css
@@ -100,6 +100,16 @@ label.error-block {
     border-radius:100%;
 }
 
-.card {
+.shade {
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.table-bordered td, .table-bordered th {
+    border: 1px solid #d8dbe0 !important;
+}
+
+.tr-head {
+	background-color: #495057;
+	color: white;
+	text-align: center;
 }
